--- a/index.html
+++ b/index.html
@@ -6,6 +6,80 @@
     <title>Visit Dubai - Official Tourism Board in Dubai</title>
 </head>
 <body>
-    
+    <!-- Yash Work -->
+    <div class="container"></div>
+        <hr>
+        <section class="things-to-do">
+            <div class="heading">
+                <p>Top 4 things to do this week</p>
+            </div>
+            <div class="cards-container">
+                <div class="cards">
+                    <div class="image">
+                        <img src="../Yash-Assets/for-music.49&cw=500&ch=375" alt="zabeel-theatre">
+                    </div>
+                    <div class="text">
+                        <h4>Family</h4>
+                        <a href="/">1. Book tickets for a family show</a>
+                        <p>See author Tom Fletcher's picture-book series come alive with 'There's A Monster In Your Show' musical at Zabeel Theatre.</p>
+                    </div>
+                    <div class="btn">
+                        <button>
+                            <a href="/">Discover More</a>
+                        </button>
+                    </div>
+                </div>
+                <div class="cards">
+                    <div class="image">
+                        <img src="../Yash-Assets/sking.97&cw=500&ch=375" alt="sking">
+                    </div>
+                    <div class="text">
+                        <h4>Sports</h4>
+                        <a href="/">2. Take on an icy obstacle course</a>
+                        <p>Jump, crawl and climb through a 3.5km assault course at Ski Dubai's Ice Warrior Challenge this weekend.</p>
+                    </div>
+                    <div class="btn">
+                        <button>
+                            <a href="/">Discover More</a>
+                        </button>
+                    </div>
+                </div>
+                <div class="cards">
+                    <div class="image">
+                        <img src="../Yash-Assets/dinner.5&cw=500&ch=375" alt="dine">
+                    </div>
+                    <div class="text">
+                        <h4>Food & Drink</h4>
+                        <a href="/">3. Dine at Market Island</a>
+                        <p>Satisfy your palate with choices from over 50 eateries at Market Island, the largest food hall in the Middle East.</p>
+                    </div>
+                    <div class="btn">
+                        <button>
+                            <a href="/">Discover More</a>
+                        </button>
+                    </div>
+                </div>
+                <div class="cards">
+                    <div class="image">
+                        <img src="../Yash-Assets/pool.62&cw=500&ch=375" alt="pool">
+                    </div>
+                    <div class="text">
+                        <h4>Wellness</h4>
+                        <a href="/">4. Take a dip in Dubai's best pools</a>
+                        <p>From epic views to ultimate relaxation - here's our round up of the most exclusive hotel pools in the city.</p>
+                    </div>
+                    <div class="btn">
+                        <button>
+                            <a href="/">Discover More</a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <hr />
+        <section class="what-hapennig">
+            
+        </section>
+    </div>
 </body>
 </html>
