made changes that are conflicting after merging

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
             <div class="footer-list">
                 <div class="sublist">
-                    <h4>Popular links</h4>
+                    <h4 class="h4">Popular links</h4>
                     <ul>
                         <li class="sublist-item">
                             <a href="https://www.visitdubai.com/en/explore-dubai" target title="">Explore Dubai</a>
@@ -147,7 +147,7 @@
                     </ul>
                 </div>
                 <div class="sublist">
-                    <h4>Helpful information</h4>
+                    <h4 class="h4">Helpful information</h4>
                     <ul>
                         <li class="sublist-item">
                             <a href="https://www.visitdubai.com/en/plan-your-trip" target title="">Plan your trip</a>
@@ -169,7 +169,7 @@
                     </ul>
                 </div>
                 <div class="sublist">
-                    <h4>Related sites</h4>
+                    <h4 class="h4">Related sites</h4>
                     <ul>
                         <li class="sublist-item">
                             <a href="https://www.investindubai.gov.ae/en/" target title="">Invest in dubai</a>
@@ -181,7 +181,7 @@
                     </ul>
                 </div>
                 <div class="sublist">
-                    <h4>Useful links</h4>
+                    <h4 class="h4">Useful links</h4>
                     <ul>
                         <li class="sublist-item">
                             <a href="" target title="">Submit a complaint</a>
