Yash 2nd commit

--- a/index.html
+++ b/index.html
@@ -10,69 +10,76 @@
     <!-- Yash Work -->
 
     <div class="container">
-        <hr>
         <section class="things-to-do">
             <div class="heading">
                 <p>Top 4 things to do this week</p>
+                <div class="scroll-btn">
+                    <button class="left">
+                        <i class="fa-solid fa-angle-left"></i>
+                    </button>
+                    <button class="right">
+                        <i class="fa-solid fa-angle-right"></i>
+                    </button>
+                </div>
             </div>
-            <div class="cards-container">
-                <div class="cards">
-                    <div class="image">
-                        <img src="../Yash-Assets/for-music.49&cw=500&ch=375" alt="zabeel-theatre">
+            <div class="cards-container-1">
+                <div class="cards-1">
+                    <div class="image-1">
+                        <img src="./Yash-Assets/for-music.49&cw=500&ch=375" alt="zabeel-theatre">
                     </div>
-                    <div class="text">
+                    <div class="text-1">
                         <h4>Family</h4>
                         <a href="/">1. Book tickets for a family show</a>
                         <p>See author Tom Fletcher's picture-book series come alive with There's A Monster In Your Show musical at Zabeel Theatre.</p>
                     </div>
-                    <div class="btn">
+                    <div class="btn-1">
                         <button>
                             <a href="/">Discover More</a>
                         </button>
                     </div>
                 </div>
-                <div class="cards">
-                    <div class="image">
-                        <img src="../Yash-Assets/sking.97&cw=500&ch=375" alt="sking">
+                <div class="cards-1">
+                    <div class="image-1">
+                        <img src="./Yash-Assets/sking.97&cw=500&ch=375" alt="sking">
                     </div>
-                    <div class="text">
+                    <div class="text-1">
                         <h4>Sports</h4>
                         <a href="/">2. Take on an icy obstacle course</a>
                         <p>Jump, crawl and climb through a 3.5km assault course at Ski Dubai's Ice Warrior Challenge
                             this
                             weekend.</p>
                     </div>
-                    <div class="btn">
+                    <div class="btn-1">
                         <button>
                             <a href="/">Discover More</a>
                         </button>
                     </div>
                 </div>
-                <div class="cards">
-                    <div class="image">
-                        <img src="../Yash-Assets/dinner.5&cw=500&ch=375" alt="dine">
+                <div class="cards-1">
+                    <div class="image-1">
+                        <img src="./Yash-Assets/dinner.5&cw=500&ch=375" alt="dine">
                     </div>
-                    <div class="text">
+                    <div class="text-1">
                         <h4>Food & Drink</h4>
                         <a href="/">3. Dine at Market Island</a>
                         <p>Satisfy your palate with choices from over 50 eateries at Market Island, the largest food hall in the Middle East.</p>
                     </div>
-                    <div class="btn">
+                    <div class="btn-1">
                         <button>
                             <a href="/">Discover More</a>
                         </button>
                     </div>
                 </div>
-                <div class="cards">
-                    <div class="image">
-                        <img src="../Yash-Assets/pool.62&cw=500&ch=375" alt="pool">
+                <div class="cards-1">
+                    <div class="image-1">
+                        <img src="./Yash-Assets/pool.62&cw=500&ch=375" alt="pool">
                     </div>
-                    <div class="text">
+                    <div class="text-1">
                         <h4>Wellness</h4>
                         <a href="/">4. Take a dip in Dubai's best pools</a>
                         <p>From epic views to ultimate relaxation - here's our round up of the most exclusive hotel pools in the city.</p>
                     </div>
-                    <div class="btn">
+                    <div class="btn-1">
                         <button>
                             <a href="/">Discover More</a>
                         </button>
@@ -80,10 +87,27 @@
                 </div>
             </div>
         </section>
-        <hr />
-        <section class="what-hapennig">
-
+        <section class="what-happening">
+            <h1>What's happening now</h1>
+            <div class="dubai-24">
+                <!-- <i class="fa-regular fa-heart"></i> -->
+                <div class="image-2">
+                    <img src="./Yash-Assets/downtown-dubai.48&cw=325&ch=330" alt="24 hours in dubai">
+                </div>
+                <div class="text-2">
+                    <h4>SIGHTS & ATTRACTIONS</h4>
+                    <div class="paras-1">
+                        <a href="/">24 hours in Downtown Dubai</a>
+                        <p>Enjoy an action-packed day in Dubai's 'centre of now' and discover incredible restaurants, attractions, spas, shows and much more.</p>
+                    </div>
+                    <div class="btn-2">
+                        <a href="/">Read More</a>
+                        <i class="fa-solid fa-angle-right"></i>
+                    </div>
+                </div>
+            </div>
         </section>
+        <section class="cards-container-2"></section>
     </div>
     <!-- Jeet work Footer -->
     <div class="main-container">
@@ -215,5 +239,7 @@
             </div>
         </div>
     </div>
+
+    <script src="https://kit.fontawesome.com/c934436e0b.js" crossorigin="anonymous"></script>
 </body>
 </html>
