Yash 3rd commit (done the assigned work for landing page)

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <!-- Yash Work -->
-
+    <!-- Yash Work from here-->
     <div class="container">
         <section class="things-to-do">
             <div class="heading">
@@ -107,8 +106,107 @@
                 </div>
             </div>
         </section>
-        <section class="cards-container-2"></section>
+        <section class="in-dubai">
+            <div class="cards-container-2">
+                <!-- <button class="left">
+                    <i class="fa-solid fa-angle-left"></i>
+                </button>
+                <button class="right">
+                    <i class="fa-solid fa-angle-right"></i>
+                </button> -->
+                <div class="cards-2">
+                    <div class="image-3">
+                        <img src="./Yash-Assets/things-to-do.5&cw=340&ch=243" alt="things do in dubai">
+                        <button>
+                            <i class="fa-regular fa-heart icon-2"></i>
+                        </button>
+                    </div>
+                    <a href="/">Things to do in Dubai</a>
+                    <p>5 MIN READ</p>
+                </div>
+                <div class="cards-2">
+                    <div class="image-3">
+                        <img src="./Yash-Assets/museum.5&cw=340&ch=243" alt="best museum in dubai">
+                        <button>
+                            <i class="fa-regular fa-heart icon-2"></i>
+                        </button>
+                    </div>
+                    <a href="/">Discover the best museums in Dubai</a>
+                    <p>6 MIN READ</p>
+                </div>
+                <div class="cards-2">
+                    <div class="image-3">
+                        <img src="./Yash-Assets/burj-khalifa.42&cw=340&ch=243" alt="burj khalifa">
+                        <button>
+                            <i class="fa-regular fa-heart icon-2"></i>
+                        </button>
+                    </div>
+                    <a href="/">Where to take the perfect photo of Burj Khalifa</a>
+                    <p>3 MIN READ</p>
+                </div>
+                <div class="cards-2">
+                    <div class="image-3">
+                        <img src="./Yash-Assets/top-view-decks.5&cw=340&ch=243" alt="top-view-decks">
+                        <button>
+                            <i class="fa-regular fa-heart icon-2"></i>
+                        </button>
+                    </div>
+                    <a href="/">Top observation decks in Dubai</a>
+                    <p>2 MIN READ</p>
+                </div>
+            </div>
+            <div class="more">
+                <a href="/">See more articles</a>
+                <i class="fa-solid fa-angle-right"></i>
+            </div>
+        </section>
+        <section class="watch-videos">
+            <h1>Watch videos</h1>
+            <div class="cards-container-3">
+                <div class="cards-3">
+                    <img src="./Yash-Assets/one-day-in-dubai.34&cw=220&ch=346" alt="one-day-in-dubai">
+                    <div class="context-1">
+                        <a href="/">1 Day in Dubai</a>
+                        <i class="fa-solid fa-angle-right"></i>
+                    </div>
+                </div>
+                <div class="cards-3">
+                    <img src="./Yash-Assets/two-days-in-dubai.5&cw=220&ch=346" alt="two-days-in-dubai">
+                    <div class="context-1">
+                        <a href="/">2 Days in Dubai</a>
+                        <i class="fa-solid fa-angle-right"></i>
+                    </div>
+                </div>
+                <div class="cards-3">
+                    <img src="./Yash-Assets/three-days-in-dubai.39&cw=220&ch=346" alt="three-days-in-dubai">
+                    <div class="context-1">
+                        <a href="/">3 Days in Dubai</a>
+                        <i class="fa-solid fa-angle-right"></i>
+                    </div>
+                </div>
+                <div class="cards-3">
+                    <img src="./Yash-Assets/dubai-culture.5&cw=220&ch=346" alt="dubai-culture">
+                    <div class="context-1">
+                        <a href="/">Explore the best of Dubai's culture</a>
+                        <i class="fa-solid fa-angle-right"></i>
+                    </div>
+                </div>
+                <div class="cards-3">
+                    <img src="./Yash-Assets/five-adventure-days-in-dubai.5&cw=220&ch=346" alt="five-adventure-days-in-dubai">
+                    <div class="context-1">
+                        <a href="/">Five days of adventure in Dubai</a>
+                        <i class="fa-solid fa-angle-right"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="btn-3">
+                <a href="/">See More</a>
+                <i class="fa-solid fa-angle-right"></i>
+            </div>
+        </section>
     </div>
+    <!-- to here Yash work end -->
+     
     <!-- Jeet work Footer -->
     <div class="main-container">
         <div class="main-footer">
