Yash 4th commit did Shashi's work

--- a/index.html
+++ b/index.html
@@ -204,6 +204,218 @@
                 <i class="fa-solid fa-angle-right"></i>
             </div>
         </section>
+        <section class="be-inspired">
+            <h1>Be inspired</h1>
+            <div class="cards-container-4">
+                <div class="cards-4">
+                    <div class="image-container-1">
+                        <div class="image-4">
+                            <img src="./Yash-Assets/couple-image-1.5&cw=162&ch=243" alt="couple-image-1">
+                        </div>
+                        <div class="image-5">
+                            <img src="./Yash-Assets/couple-image-2.48&cw=161&ch=121" alt="couple-image-2">
+                            <img src="./Yash-Assets/couple-image-3.5&cw=161&ch=121" alt="couple-image-3">
+                        </div>
+                    </div>
+                    <div class="text-3">
+                        <h4>COUPLE</h4>
+                        <div class="paras-2">
+                            <a href="/">The ultimate Dubai retreat for couples</a>
+                            <p>From cultural delights to Downtown dining and desert luxury, this five-day trip for couples is perfectly balanced for a blissful holiday.</p>
+                        </div>
+                        <p>05 Days</p>
+                    </div>
+                </div>
+                <div class="cards-4">
+                    <div class="image-container-1">
+                        <div class="image-4">
+                            <img src="./Yash-Assets/art-culture-1.5&cw=162&ch=243" alt="art-culture-1">
+                        </div>
+                        <div class="image-5">
+                            <img src="./Yash-Assets/arts-culture-2.18&cw=161&ch=121" alt="arts-culture-2">
+                            <img src="./Yash-Assets/arts-culture-3.5&cw=161&ch=121" alt="arts-culture-3">
+                        </div>
+                    </div>
+                    <div class="text-3">
+                        <h4>ARTS & CULTURE</h4>
+                        <div class="paras-2">
+                            <a href="/">A contemprary art journey</a>
+                            <p>New perspectives, majestic architecture and modern art. This three-day itinerary showcases the best of Dubai's growing creative scene.</p>
+                        </div>
+                        <p>03 Days</p>
+                    </div>
+                </div>
+                <div class="cards-4">
+                    <div class="image-container-1">
+                        <div class="image-4">
+                            <img src="./Yash-Assets/dessert-1.5&cw=162&ch=243" alt="dessert-1">
+                        </div>
+                        <div class="image-5">
+                            <img src="./Yash-Assets/dessert-2.5&cw=161&ch=121" alt="dessert-2">
+                            <img src="./Yash-Assets/dessert-3.54&cw=161&ch=121" alt="dessert-3">
+                        </div>
+                    </div>
+                    <div class="text-3">
+                        <h4>DESSERT</h4>
+                        <div class="paras-2">
+                            <a href="/">A Dubai desert adventure to remember</a>
+                            <p>Bedouin culture, camel rides and fast four-wheel-drives rolling over the dunes – Dubai's desert landscape offers much more than you would ever expect</p>
+                        </div>
+                        <p>03 Days</p>
+                    </div>
+                </div>
+                <div class="cards-4">
+                    <div class="image-container-1">
+                        <div class="image-4">
+                            <img src="./Yash-Assets/couple-image-3.5&cw=161&ch=121" alt="shopping-1">
+                        </div>
+                        <div class="image-5">
+                            <img src="./Yash-Assets/shopping-2.5&cw=161&ch=121" alt="shopping-2">
+                            <img src="./Yash-Assets/shopping-3.99&cw=161&ch=121" alt="shopping-3">
+                        </div>
+                    </div>
+                    <div class="text-3">
+                        <h4>SHOPPING</h4>
+                        <div class="paras-2">
+                            <a href="/">Shop the Arabian way in Dubai</a>
+                            <p>Explore Dubai's traditional souks and markets to find a world of fragrances, fashion, jewellery and more</p>
+                        </div>
+                        <p>03 Days</p>
+                    </div>
+                </div>
+            </div>
+            <div class="more-2">
+                <a href="/">See more itineraries</a>
+                <i class="fa-solid fa-angle-right"></i>
+            </div>
+        </section>
+        <section class="find-things">
+            <h1>Find things to do</h1>
+            <nav class="nav-1">
+                <ul>
+                    <li>
+                        <a href="/">All</a>
+                    </li>
+                    <li>
+                        <a href="/">Adventure</a>
+                    </li>
+                    <li>
+                        <a href="/">Arts & Culture</a>
+                    </li>
+                    <li>
+                        <a href="/">Food & Drink</a>
+                    </li>
+                    <li>
+                        <a href="/">Spas & Wellness</a>
+                    </li>
+                    <li>
+                        <a href="/">Sights & Attractions</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="cards-container-5">
+                <div class="cards-5">
+                    <img src="./Yash-Assets/find-desert-1.82&cw=340&ch=243" alt="desert">
+                    <div class="text-4">
+                        <button>
+                            <i class="fa-regular fa-heart icon-2"></i>
+                        </button>
+                        <h4>DESERT</h4>
+                        <a href="/">Arabian Adventures</a>
+                        <p>Conquer the dunes with top-rated tours</p>
+                        <h5>7,368 REVIEWS</h5>
+                    </div>
+                </div>
+                <div class="cards-5">
+                    <img src="./Yash-Assets/find-adventure-1.5&cw=340&ch=243" alt="adventure">
+                    <div class="text-4">
+                        <button>
+                            <i class="fa-regular fa-heart icon-2"></i>
+                        </button>
+                        <h4>ADVENTURE</h4>
+                        <a href="/">Aventura Parks</a>
+                        <p>Swing from the branches at this tree-top adventure park</p>
+                        <h5>278 reviews</h5>
+                    </div>
+                </div>
+                <div class="cards-5">
+                    <img src="./Yash-Assets/find-desert-2.56&cw=340&ch=243" alt="desert">
+                    <div class="text-4">
+                        <button>
+                            <i class="fa-regular fa-heart icon-2"></i>
+                        </button>
+                        <h4>DESERT</h4>
+                        <a href="/">Platinum Heritage</a>
+                        <p>Embark on an authentic desert adventure done in style</p>
+                        <h5>5,985 reviews</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="more-2">
+                <a href="/">See more</a>
+                <i class="fa-solid fa-angle-right"></i>
+            </div>
+        </section>
+        <section class="events">
+            <h1>Upcoming events in September</h1>
+            <div class="cards-container-5">
+                <div class="cards-5">
+                    <img src="./Yash-Assets/nassif-event.41&cw=340&ch=243" alt="nassif-event">
+                    <div class="text-4">
+                        <button>
+                            <i class="fa-regular fa-heart icon-2"></i>
+                        </button>
+                        <h4>LIVE SHOWS & CONCERTS</h4>
+                        <a href="/">Nassif Zeitoun live</a>
+                        <p>29 Sept</p>
+                        <hr />
+                        <div class="remind">
+                            <i class="fa-regular fa-calendar-check"></i>
+                            <p>Remind me</p>
+                            <i class="fa-solid fa-plus right-plus"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="cards-5">
+                    <img src="./Yash-Assets/angham-event.37&cw=340&ch=243" alt="angham-event">
+                    <div class="text-4">
+                        <button>
+                            <i class="fa-regular fa-heart icon-2"></i>
+                        </button>
+                        <h4>LIVE SHOWS & CONCERTS</h4>
+                        <a href="/">Angham live</a>
+                        <p>27 Sept</p>
+                        <hr />
+                        <div class="remind">
+                            <i class="fa-regular fa-calendar-check"></i>
+                            <p>Remind me</p>
+                            <i class="fa-solid fa-plus right-plus"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="cards-5">
+                    <img src="./Yash-Assets/ekher-sigara.5&cw=340&ch=243" alt="ekher-sigara">
+                    <div class="text-4">
+                        <button>
+                            <i class="fa-regular fa-heart icon-2"></i>
+                        </button>
+                        <h4>LIVE SHOWS & CONCERTS</h4>
+                        <a href="/">Play: Ekher Cigara</a>
+                        <p>25 Sept - 26 Sept</p>
+                        <hr />
+                        <div class="remind">
+                            <i class="fa-regular fa-calendar-check"></i>
+                            <p>Remind me</p>
+                            <i class="fa-solid fa-plus right-plus"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="more-2">
+                <a href="/">See more</a>
+                <i class="fa-solid fa-angle-right"></i>
+            </div>
+        </section>
     </div>
     <!-- to here Yash work end -->
      
