commited by nimesh

--- a/NIMESH/nimesh.html
+++ b/NIMESH/nimesh.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visit Dubai - Official Tourism Board in Dubai</title>
+    <title>Dubai Tourism</title>
+    <link rel="stylesheet" href="nimesh.css">
 </head>
 <body>
-    <!-- Nimesh work -->
     <div class="nimesh-container">
         <div class="explore">
             Explore by neighbourhood
@@ -87,6 +87,5 @@
     </div>
         </div>
         <hr class="line">
-        <!-- Nimesh work ends here -->
-</body>
+        </body>
 </html>
