--- a/NIMESH/nimesh.html
+++ b/NIMESH/nimesh.html
@@ -21,7 +21,7 @@
     </div>
        
         <div class="locators">
-            <div class="loc1"><img src="./assets/locator.svg" alt="dot" height="30">Palm jumerah</div>
+            <div class="loc1"><img src=".Nimesh-assets/pointer.svg" alt="dot" height="30">Palm jumerah</div>
             <div class="loc2"><img src="./assets/locator.svg" alt="dot" height="30">Downtown Dubai</div>
             <div class="loc3"><img src="./assets/locator.svg" alt="dot" height="30">Jumeirah</div>
             <div class="loc4"><img src="./assets/locator.svg" alt="dot" height="30">Dubai Marina</div>
