Yash 5th commit

--- a/index.html
+++ b/index.html
@@ -315,7 +315,9 @@
             </nav>
             <div class="cards-container-5">
                 <div class="cards-5">
-                    <img src="./Yash-Assets/find-desert-1.82&cw=340&ch=243" alt="desert">
+                    <div class="image-6">
+                        <img src="./Yash-Assets/find-desert-1.82&cw=340&ch=243" alt="desert">
+                    </div>
                     <div class="text-4">
                         <button>
                             <i class="fa-regular fa-heart icon-2"></i>
@@ -327,7 +329,9 @@
                     </div>
                 </div>
                 <div class="cards-5">
-                    <img src="./Yash-Assets/find-adventure-1.5&cw=340&ch=243" alt="adventure">
+                    <div class="image-6">
+                        <img src="./Yash-Assets/find-adventure-1.5&cw=340&ch=243" alt="adventure">
+                    </div>
                     <div class="text-4">
                         <button>
                             <i class="fa-regular fa-heart icon-2"></i>
@@ -335,11 +339,13 @@
                         <h4>ADVENTURE</h4>
                         <a href="/">Aventura Parks</a>
                         <p>Swing from the branches at this tree-top adventure park</p>
-                        <h5>278 reviews</h5>
+                        <h5>278 REVIEWS</h5>
                     </div>
                 </div>
                 <div class="cards-5">
-                    <img src="./Yash-Assets/find-desert-2.56&cw=340&ch=243" alt="desert">
+                    <div class="image-6">
+                        <img src="./Yash-Assets/find-desert-2.56&cw=340&ch=243" alt="desert">
+                    </div>
                     <div class="text-4">
                         <button>
                             <i class="fa-regular fa-heart icon-2"></i>
@@ -347,7 +353,7 @@
                         <h4>DESERT</h4>
                         <a href="/">Platinum Heritage</a>
                         <p>Embark on an authentic desert adventure done in style</p>
-                        <h5>5,985 reviews</h5>
+                        <h5>5,985 REVIEWS</h5>
                     </div>
                 </div>
             </div>
@@ -360,7 +366,9 @@
             <h1>Upcoming events in September</h1>
             <div class="cards-container-5">
                 <div class="cards-5">
-                    <img src="./Yash-Assets/nassif-event.41&cw=340&ch=243" alt="nassif-event">
+                    <div class="image-6">
+                        <img src="./Yash-Assets/nassif-event.41&cw=340&ch=243" alt="nassif-event">
+                    </div>
                     <div class="text-4">
                         <button>
                             <i class="fa-regular fa-heart icon-2"></i>
@@ -377,7 +385,9 @@
                     </div>
                 </div>
                 <div class="cards-5">
-                    <img src="./Yash-Assets/angham-event.37&cw=340&ch=243" alt="angham-event">
+                    <div class="image-6">
+                        <img src="./Yash-Assets/angham-event.37&cw=340&ch=243" alt="angham-event">
+                    </div>
                     <div class="text-4">
                         <button>
                             <i class="fa-regular fa-heart icon-2"></i>
@@ -394,7 +404,9 @@
                     </div>
                 </div>
                 <div class="cards-5">
-                    <img src="./Yash-Assets/ekher-sigara.5&cw=340&ch=243" alt="ekher-sigara">
+                    <div class="image-6">
+                        <img src="./Yash-Assets/ekher-sigara.5&cw=340&ch=243" alt="ekher-sigara">
+                    </div>
                     <div class="text-4">
                         <button>
                             <i class="fa-regular fa-heart icon-2"></i>
