--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                     </div>
                     <div class="text-1">
                         <h4>Live Shows</h4>
-                        <a href="/">1. Sing along with A-list artists</a>
+                        <a href="./Yash-Links/live-show.html">1. Sing along with A-list artists</a>
                         <p>See your favourite international stars perform chart-topping tunes live in Dubai.</p>
                     </div>
                     <div class="btn-1">
                         <button>
-                            <a href="/">Discover More</a>
+                            <a href="./Yash-Links/live-show.html">Discover More</a>
                         </button>
                     </div>
                 </div>
