responsive added by Nimesh

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <div class="city">
                 Get to know the city one district at a time
             </div>
-            <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d283119.4166472419!2d54.887289603472404!3d25.067675723341832!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f1529c2653b15%3A0x3dcabcae764a3e16!2sPalm%20Jumeirah!5e0!3m2!1sen!2sin!4v1727007888493!5m2!1sen!2sin" width="900" height="550" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d283119.4166472419!2d54.887289603472404!3d25.067675723341832!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f1529c2653b15%3A0x3dcabcae764a3e16!2sPalm%20Jumeirah!5e0!3m2!1sen!2sin!4v1727007888493!5m2!1sen!2sin"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
             </div>
     </div>
        
@@ -58,9 +58,9 @@
       <br>
       <div>
         <div class="banner">
-            <div><img src="https://www.visitdubai.com/-/media/gathercontent/article/b/best-rollercoasters-in-dubai/media/best-rollercoasters-in-dubai-motiongate-park-6.jpg?rev=ff92f331202545beb9cd65b74bb3da02&cx=0.5&cy=0.5&cw=580&ch=580" alt="pic"></div>
+            <div><img src="https://www.visitdubai.com/-/media/gathercontent/article/b/best-rollercoasters-in-dubai/media/best-rollercoasters-in-dubai-motiongate-park-6.jpg?rev=ff92f331202545beb9cd65b74bb3da02&cx=0.5&cy=0.5&cw=580&ch=580" alt="pic" class="ban-img"></div>
             <div class="offer">
-                <div><h3>Save up to 60% with the Dubai Pass</h3></div>
+                <div class="offer-text"><h3>Save up to 60% with the Dubai Pass</h3></div>
                 <br>
                 <div><p>Experience all that's possible with the Dubai Pass. Create your own tailor-made itinerary, choosing from 48 must-visit attractions and activities.</p></div>
                 <br>
@@ -90,6 +90,7 @@
     </div>
         </div>
         <hr class="line">
+        
         <!-- Nimesh work ends here -->
     <link rel="stylesheet" href="./styles.css">
 </head>
