Created some changes that will aligne the main UI

--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <!-- up-button by Yash -->
+    <button class="up-btn">
+        <a href="#navbar">
+            <i class="fa-solid fa-arrow-up"></i>
+        </a>
+    </button>
+
     <!-- Anand's Work -->
  <!-- first navbar ...... HTML -->
     
- <nav class="navbar">
+ <nav class="navbar" id="navbar">
 
 
     <!-- first navbar ............ -->
@@ -114,7 +121,7 @@
 
 <div class="main">
     <div class="main_part_1"><img src="assets/asset 3.png" alt="" class="firstimage"></div>
-    <div class="main_part_2"><button class="btn2"><img src="assets/filled triangle right side.svg" alt="" class="button-image"></button></div>
+    <div class="main_part_2"><button class="btn2"><i class="fa-solid fa-play"></i></button></div>
 </div>
 <div class="main_part_3"><h1 class="welcome">Welcome to Dubai</h1>
     <p class="welcomepara">Beautiful beaches, record-breaking attractions and experiences like no other – Dubai is the place to be in 2024. It's no wonder we are the first city to be named Tripadvisor's #1 Top Destination in the World for three years running. Let's explore!</p>
