--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <i class="fa-solid fa-arrow-up"></i>
         </a>
     </button>
+    <!-- up-button end here -->
 
     <!-- Anand's Work -->
  <!-- first navbar ...... HTML -->
@@ -561,148 +562,170 @@
     <!-- to here Yash work end -->
 
     <!-- Nimesh work -->
-    <div class="nimesh-container">
-        <div class="explore">
-            Explore by neighbourhood
-        </div>
-        <br>
-        <div class="city">
-            Get to know the city one district at a time
-        </div>
-        <div>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d283119.4166472419!2d54.887289603472404!3d25.067675723341832!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f1529c2653b15%3A0x3dcabcae764a3e16!2sPalm%20Jumeirah!5e0!3m2!1sen!2sin!4v1727007888493!5m2!1sen!2sin"
-                style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
-                class="map"></iframe>
+    <div class="location-container">
+        <div class="location">
+            <h1>Explore by neighbourhood</h1>
+            <p>Get to know the city one district at a time</p>
+            <div class="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d121276.7094158214!2d55.12508739357351!3d25.083144233078944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f43496ad9c645%3A0xbde66e5084295162!2sDubai%20-%20United%20Arab%20Emirates!5e0!3m2!1sen!2sin!4v1727338676485!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="pin">
+                    <blockquote>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <span>Palm Jumeirah</span>
+                    </blockquote>
+                    <blockquote>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <span>Downtown Dubai</span>
+                    </blockquote>
+                    <blockquote>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <span>Jumeirah</span>
+                    </blockquote>
+                    <blockquote>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <span>Dubai Marina</span>
+                    </blockquote>
+                    <blockquote>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <span>Deira</span>
+                    </blockquote>
+                    <blockquote>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <span>Bur Dubai</span>
+                    </blockquote>
+                    <blockquote>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <span>Al Barsha & Barsha Heights</span>
+                    </blockquote>
+                    <blockquote>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <span>Al Seef</span>
+                    </blockquote>
+                    <blockquote>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <span>Al Quoz</span>
+                    </blockquote>
+                    <blockquote>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <span>Business Bay</span>
+                    </blockquote>
+                    <blockquote>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <span>Dubai International Financial Centre</span>
+                    </blockquote>
+                    <blockquote>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <span>Dubai Design District</span>
+                    </blockquote>
+                    <blockquote>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <span>Jumeirah Lake Towers</span>
+                    </blockquote>
+                    <blockquote>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <span>Al Sufouh</span>
+                    </blockquote>
+                    <blockquote>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <span>Al Safa</span>
+                    </blockquote>
+                    <blockquote>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <span>Al Karama</span>
+                    </blockquote>
+                    <blockquote>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <span>Al Satwa</span>
+                    </blockquote>
+                    <blockquote>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <span>Umm Suqeim</span>
+                    </blockquote>
+                </div>
+            </div>
+            <section class="plan-ahead">
+                <div class="heading">
+                    <p>Plan Ahead</p>
+                    <div class="scroll-btn">
+                        <button class="left">
+                            <i class="fa-solid fa-angle-left"></i>
+                        </button>
+                        <button class="right">
+                            <i class="fa-solid fa-angle-right"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="cards-container-1">
+                    <div class="cards-1">
+                        <div class="image-1">
+                            <img src="./Yash-Assets/visa-guide.5&cw=500&ch=375" alt="visa-guide">
+                        </div>
+                        <div class="text-1">
+                            <a href="./Yash-Links/live-show.html">Visa Guide</a>
+                            <p>Essential information before you plan your trip to Dubai</p>
+                        </div>
+                        <div class="btn-1">
+                            <button>
+                                <a href="./Yash-Links/live-show.html">Learn More</a>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="cards-1">
+                        <div class="image-1">
+                            <img src="./Yash-Assets/public-transport.5&cw=500&ch=375" alt="public-transport">
+                        </div>
+                        <div class="text-1">
+                            <a href="./Yash-Links/live-show.html">Public Transport</a>
+                            <p>Learn how to arrive in Dubai and the best ways to get around</p>
+                        </div>
+                        <div class="btn-1">
+                            <button>
+                                <a href="./Yash-Links/live-show.html">Learn More</a>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="cards-1">
+                        <div class="image-1">
+                            <img src="./Yash-Assets/places-to-stay.42&cw=500&ch=375" alt="places-to-stay">
+                        </div>
+                        <div class="text-1">
+                            <a href="./Yash-Links/live-show.html">Places to stay</a>
+                            <p>Explore an incredible range of accommodation options</p>
+                        </div>
+                        <div class="btn-1">
+                            <button>
+                                <a href="./Yash-Links/live-show.html">Learn More</a>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="cards-1">
+                        <div class="image-1">
+                            <img src="./Yash-Assets/about-dubai.5&cw=500&ch=375" alt="about-dubai">
+                        </div>
+                        <div class="text-1">
+                            <a href="./Yash-Links/live-show.html">About Dubai</a>
+                            <p>See how Dubai transformed into a sun-soaked modern metropolis</p>
+                        </div>
+                        <div class="btn-1">
+                            <button>
+                                <a href="./Yash-Links/live-show.html">Learn More</a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="discount-offer">
+                <div class="image-7">
+                    <img src="./Yash-Assets/roller-coaster.5&cw=580&ch=580" alt="roller-coaster">
+                </div>
+                <div class="discount-text">
+                    <a href="/">Save up to 60% with the Dubai Pass</a>
+                    <p>Experience all that's possible with the Dubai Pass. Create your own tailor-made itinerary, choosing from 48 must-visit attractions and activities. </p>
+                    <button>Buy Now</button>
+                </div>
+            </section>
         </div>
     </div>
-
-    <div class="locators">
-        <div class="loc1"><img src="./NIMESH/Nimesh-assets/pointer.svg" alt="dot" height="30">Palm jumerah</div>
-        <div class="loc2"><img src="./NIMESH/Nimesh-assets/pointer.svg" alt="dot" height="30">Downtown Dubai</div>
-        <div class="loc3"><img src="./NIMESH/Nimesh-assets/pointer.svg" alt="dot" height="30">Jumeirah</div>
-        <div class="loc4"><img src="./NIMESH/Nimesh-assets/pointer.svg" alt="dot" height="30">Dubai Marina</div>
-        <div class="loc5"><img src="./NIMESH/Nimesh-assets/pointer.svg" alt="dot" height="30">Deira</div>
-        <div class="loc6"><img src="./NIMESH/Nimesh-assets/pointer.svg" alt="dot" height="30">Bur Duabi</div>
-        <div class="loc7"><img src="./NIMESH/Nimesh-assets/pointer.svg" alt="dot" height="30">Al Barsha & Barsha Heights
-        </div>
-        <div class="loc8"><img src="./NIMESH/Nimesh-assets/pointer.svg" alt="dot" height="30">Al seef</div>
-        <div class="loc9"><img src="./NIMESH/Nimesh-assets/pointer.svg" alt="dot" height="30">Al quoz</div>
-        <div class="loc10"><img src="./NIMESH/Nimesh-assets/pointer.svg" alt="dot" height="30">Business Bay</div>
-        <div class="loc11"><img src="./NIMESH/Nimesh-assets/pointer.svg" alt="dot" height="30">Dubai international
-            Financial Center</div>
-        <div class="loc12"><img src="./NIMESH/Nimesh-assets/pointer.svg" alt="dot" height="30">Duabi Design District
-        </div>
-        <div class="loc13"><img src="./NIMESH/Nimesh-assets/pointer.svg" alt="dot" height="30">JUmeirah Lake towers
-        </div>
-        <div class="loc14"><img src="./NIMESH/Nimesh-assets/pointer.svg" alt="dot" height="30">Al sufoah</div>
-        <div class="loc15"><img src="./NIMESH/Nimesh-assets/pointer.svg" alt="dot" height="30">Al safa</div>
-        <div class="loc16"><img src="./NIMESH/Nimesh-assets/pointer.svg" alt="dot" height="30">Al Karama</div>
-        <div class="loc17"><img src="./NIMESH/Nimesh-assets/pointer.svg" alt="dot" height="30">Al satwa</div>
-        <div class="loc18"><img src="./NIMESH/Nimesh-assets/pointer.svg" alt="dot" height="30">Umm suqeim</div>
-    </div>
-    <br>
-    <br>
-
-    <div class="planahead">
-        <div class="plan-heading">
-            <h3>Plan Ahead</h3>
-        </div>
-    </div>
-    <br>
-    <div class="items">
-        <div class="item-1"><img
-                src="https://www.visitdubai.com/-/media/images/leisure/detail-pages/explore-dubai/visa-and-entry/visa-and-entry-header.jpg?rev=4b3769aa09d24fe3bff474402a95352b&cx=0.5&cy=0.5&cw=500&ch=375"
-                alt="pic" class="img">
-            <div class="desc">
-                <h2>Visa Guide</h2>
-                <p class="text-area">Essential information before you plan your trip to Dubai</p><br><br><br>
-                <div><button class="button">Learn More</button></div>
-            </div>
-        </div>
-        <div class="item-2"><img
-                src="https://www.visitdubai.com/-/media/images/leisure/detail-pages/plan-your-trip/4-3-getting-to-and-around-dubai-t14/4-3-getting-to-and-around-dubai-t14-fallback.jpg?rev=8c13328a73c14792949ecd192d5b813e&cx=0.5&cy=0.5&cw=500&ch=375"
-                alt="pic" class="img">
-            <div class="desc">
-                <h2>Public Transport</h2>
-                <p class="text-area">Learn how to arrive in Dubai and the best ways to get around</p>
-                <div><br><br><br><button class="button" class="button-2">Learn More</button></div>
-            </div>
-        </div>
-        <div class="item-3"><img
-                src="https://www.visitdubai.com/-/media/images/leisure/detail-pages/plan-your-trip/4-4-places-to-stay-t14/4-4-places-to-stay-t14-fallback.jpg?rev=87039d32166b4a2e8c779d10088a8ea2&cx=0.86&cy=0.42&cw=500&ch=375"
-                alt="pic" alt="pic" class="img">
-            <div class="desc">
-                <h2>Places to Stay</h2>
-                <p class="text-area">Explore an incredible range of accommodation options</p>
-                <div><br><br><br><button class="button">Learn More</button></div>
-            </div>
-        </div>
-        <div class="item-4"><img
-                src="https://www.visitdubai.com/-/media/images/leisure/detail-pages/explore-dubai/1-1-about-dubai-t14/1-1-about-dubai-t14-fallback.jpg?rev=baf9779e4e77488eab6914875a481ed3&cx=0.5&cy=0.5&cw=500&ch=375"
-                alt="pic" class="img">
-            <div class="desc">
-                <h2>About Dubai</h2>
-                <p class="text-area">See how Dubai transformed into a sun-soaked modern metropolis</p>
-                <div><br><br><br><button class="button" class="button-2">Learn More</button></div>
-            </div>
-        </div>
-    </div>
-    <br>
-    <br>
-    <div>
-        <div class="banner">
-            <div><img
-                    src="https://www.visitdubai.com/-/media/gathercontent/article/b/best-rollercoasters-in-dubai/media/best-rollercoasters-in-dubai-motiongate-park-6.jpg?rev=ff92f331202545beb9cd65b74bb3da02&cx=0.5&cy=0.5&cw=580&ch=580"
-                    alt="pic" class="ban-img"></div>
-            <div class="offer">
-                <div class="offer-text">
-                    <h3>Save up to 60% with the Dubai Pass</h3>
-                </div>
-                <br>
-                <div>
-                    <p>Experience all that's possible with the Dubai Pass. Create your own tailor-made itinerary,
-                        choosing from 48 must-visit attractions and activities.</p>
-                </div>
-                <br>
-                <div><button class="buy">Buy Now</button></div>
-            </div>
-        </div>
-    </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <div class="weather">
-        <div>
-            <div class="current-weather">Weather in Dubai</div>
-            <div><span class="temp">37.2*</span><span><img
-                        src="https://www.visitdubai.com/-/media/Weather/128x128/night/113.png" alt="moon"
-                        class="moon"></span><span class="clear">clear</span></div>
-            <div class="unit"><span class="cel">Celcius</span> <span>Farenheit</span></div>
-        </div>
-        <div>
-            <div class="parameters">
-                <div class="sunrise">Sunrise <div class="value">06:07</div>
-                </div>
-                <div class="sunset">Sunset <div class="value">18:15</div>
-                </div>
-                <div class="low">Low <div class="value">31.1</div>
-                </div>
-                <div class="high">High <div class="value">35.3</div>
-                </div>
-                <div class="humidity">Humidity<div class="value">47%</div>
-                </div>
-                <div class="wind">Wind<div class="value">10.4km/h</div>
-                </div>
-
-            </div>
-            <div><button class="learn">Learn more</button></div>
-        </div>
-    </div>
-    <hr class="line">
-
-    <!-- Nimesh work ends here -->
 
     <!-- Jeet work Footer -->
     <div class="for-flex">
