--- a/index.html
+++ b/index.html
@@ -479,33 +479,34 @@
                   <li class="jeet-icon">
                       <a href="https://www.youtube.com/visitdubai" rel="noopener noreferrer" title="youtube" target="_blank"><i class=" youtube fa-brands fa-youtube"></i></a>
                   </li>
-              </ul>
+              </ul> 
+              
           </div>
             <div class="column">
               <h3>Popular Links</h3>
               <ul>
-                <li><a href="https://www.visitdubai.com/en/explore-dubai">Explore Dubai</a></li>
-                <li><a href="https://www.visitdubai.com/en/things-to-do">Things's to do</a></li>
-                <li><a href="https://www.visitdubai.com/en/whats-on">What's on</a></li>
-                <li><a href="https://www.visitdubai.com/en/articles">Articles</a></li>
-                <li><a href="https://www.visitdubai.com/en/places-to-visit">Places to visit</a></li>
+                <li><a href="/Jeet-links/Explore-dubai/Explore-dubai.html">Explore Dubai</a></li>
+                <li><a href="">Things's to do</a></li>
+                <li><a href="">What's on</a></li>
+                <li><a href="">Articles</a></li>
+                <li><a href="">Places to visit</a></li>
               </ul>
             </div>
             <div class="column">
               <h3>Helpful Information</h3>
               <ul>
-                <li><a href="https://www.visitdubai.com/en/plan-your-trip">Plan Your trip</a></li>
-                <li><a href="https://www.visitdubai.com/en/plan-your-trip/visa-information">Visa guide</a></li>
-                <li><a href="https://www.visitdubai.com/en/contact-us">Contact us</a></li>
-                <li><a href="https://www.visitdubai.com/en/faqs">Frequently Asked</a></li>
-                <li><a href="https://www.visitdubai.com/en/coronavirus-advisory">COVID-19 Advisory</a></li>
+                <li><a href="">Plan Your trip</a></li>
+                <li><a href="">Visa guide</a></li>
+                <li><a href="">Contact us</a></li>
+                <li><a href="">Frequently Asked</a></li>
+                <li><a href="./Jeet-links/Covid-19/Covid-19.html">COVID-19 Advisory</a></li>
               </ul>
             </div>
             <div class="column">
               <h3>Related sites</h3>
               <ul>
-                <li><a href="https://www.investindubai.gov.ae/en/">Invest in dubai</a></li>
-                <li><a href="https://www.dubaidet.gov.ae/en/">Department of Econnomy and Tourism</a></li>
+                <li><a href="">Invest in dubai</a></li>
+                <li><a href="">Department of Econnomy and Tourism</a></li>
               </ul>
             </div>
             <div class="column">
@@ -522,8 +523,8 @@
             <div class="header-container">
               <div class="header-left">
                 <nav>
-                  <a href="./Jeet-links/terms/terms.html">Terms of use</a> 
-                  <a href="./Jeet-links/privacy/privacy.html">Privacy Notice</a> 
+                  <a href="Jeet-links/terms/terms.html">Terms of use</a> 
+                  <a href="Jeet-links/privacy/privacy.html">Privacy Notice</a> 
                   <a href="#">Cookie notice</a> 
                   <a href="#">Sitemap</a> 
                 
