made some adjusment

--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
         <div class="label_div">
             <div class="label_div_leftpart">
                 <ul>
-                    <li><a href=""><img src="/assets/dubai name in design.svg" alt="" class="img1"></a></li>
-                    <li><a href="">Explore Dubai<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
-                    <li><a href="">Things to do<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
-                    <li><a href="">Eat & Drink<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
-                    <li><a href="">What's on<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
-                    <li><a href="">Plan your trip<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
-                    <li><a href="">Deals & Offers<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
-                    <li><a href="">Dubai Calender<span><img src="/assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href=""><img src="assets/dubai name in design.svg" alt="" class="img1"></a></li>
+                    <li><a href="">Explore Dubai<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="">Things to do<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="">Eat & Drink<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="">What's on<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="">Plan your trip<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="">Deals & Offers<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
+                    <li><a href="">Dubai Calender<span><img src="assets/down arrow.svg" alt="" class="rotate"></span></a></li>
                 </ul>
             </div>
             <div class="label_div_rightpart">
