changes paath of images

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                 <button class="btn1">AA+</button>
             </li>
             <li>
-                <img src="/assets/login logo.svg" alt="Login Icon">
+                <img src="assets/login logo.svg" alt="Login Icon">
                 <span class="login"><a href="">Login</a></span>
             </li>
             <li>
-                <img src="/assets/globe symbol.svg" alt="Globe Icon">
+                <img src="assets/globe symbol.svg" alt="Globe Icon">
                 <span class="globe"><a href="">English</a></span>
             </li>
         </ul>
